// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render AccessRoles for department first role 1`] = `
<div
  className="AccessRoles"
>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:restricted-role-for-department-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:restricted-role
    </div>
  </ComponentWithTooltip>
</div>
`;

exports[`Should render AccessRoles for department second role 1`] = `
<div
  className="AccessRoles"
>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:very-restricted-role-for-department-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:very-restricted-role
    </div>
  </ComponentWithTooltip>
</div>
`;

exports[`Should render AccessRoles for department two roles 1`] = `
<div
  className="AccessRoles"
>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:restricted-role-for-department-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:restricted-role
    </div>
  </ComponentWithTooltip>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:very-restricted-role-for-department-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:very-restricted-role
    </div>
  </ComponentWithTooltip>
</div>
`;

exports[`Should render AccessRoles for staff first role 1`] = `
<div
  className="AccessRoles"
>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:restricted-role-for-staff-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:restricted-role
    </div>
  </ComponentWithTooltip>
</div>
`;

exports[`Should render AccessRoles for staff second role 1`] = `
<div
  className="AccessRoles"
>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:very-restricted-role-for-staff-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:very-restricted-role
    </div>
  </ComponentWithTooltip>
</div>
`;

exports[`Should render AccessRoles for staff two roles 1`] = `
<div
  className="AccessRoles"
>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:restricted-role-for-staff-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:restricted-role
    </div>
  </ComponentWithTooltip>
  <ComponentWithTooltip
    text={
      <React.Fragment>
        i18nRaw:very-restricted-role-for-staff-desc
      </React.Fragment>
    }
  >
    <div
      className="AccessRoles-Item"
    >
      i18nRaw:very-restricted-role
    </div>
  </ComponentWithTooltip>
</div>
`;

exports[`Should render AccessRoles incorrect type 1`] = `""`;
